- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.9.0
 - 
    Windows 10
 
- 
        fe19527a4347dfbf39bc9073ff26a9f5a28930c0,4524cb8c98b1efe650915788f6f58cf9f35591a1
 
Message after running configure:
"Qt will be installed into '\usr\local\Qt-5.9.0'."
This incorrect path is set if one does not explicitly configure with '-prefix [path]' option. Configuring with '-prefix' can be used as a workaround.
- is duplicated by
 - 
                    
QTBUG-61797 Non-prefixed static builds of Qt default to linux paths on Windows during configure
-         
 - Closed
 
 -         
 - 
                    
QTBUG-63453 Qt5.9: default Qt install path is \usr\local\Qt5.9.x also on windows
-         
 - Closed
 
 -         
 - 
                    
QTBUG-64175 Without -prefix this installs at usr/local on windows.,
-         
 - Closed
 
 -         
 
- resulted in
 - 
                    
QTBUG-66156 [Qt 5.10.1] ASSERT: "isAbsolutePath(baseDir)" when building from sources on Windows
-         
 - Closed
 
 -